--- a/catalog-infoapi.yaml
+++ b/catalog-infoapi.yaml
@@ -12,8 +12,8 @@ metadata:
   tags:
     - dotnet
   annotations:
-    dev.azure.com/project-repo: DevSquad/infra
-    dev.azure.com/project: DevSquad
+    dev.azure.com/project-repo: projectdemo05/demo05api
+    dev.azure.com/project: projectdemo05
     dev.azure.com/build-definition: infra-cd
 spec:
   type: service
